<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="test">http://www.kiva.org/img/w80h80/674364.jpg</string>
    <string name="hello">Hello Kiva Japan!</string>
    <string name="app_name">Kiva Japan Reader</string>
    <string name="author">Yuji DOI</string>
    <string name="copyright">(c)2011, Yuji DOI</string>
    <string name="mail">yuji5296@gmail.com</string>
    <string name="url_site">https://sites.google.com/site/kivajapanrssreader/</string>
    <string name="url_code">http://code.google.com/p/kivajapan-mobile/</string>
    <string name="url_kiva">http://www.kiva.org/</string>
    <string name="url_kivajapan">http://kivajapan.jp/</string>
    <string name="help">ヘルプ</string>
    <string name="info">情報</string>
    <string name="update">更新</string>
    <string name="preference">設定</string>
    <string name="loding">起業家情報取得中</string>
    <string name="loan">融資</string>
    <string name="share">共有</string>
    <string name="search">検索</string>
    <string name="shortcut">ショートカット</string>
    <string name="bookmark">お気に入り</string>
    <string name="search_name">名前を検索</string>
    <string name="search_country">国名を検索</string>
    <string name="search_category">業種を検索</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="message_loan_confirm">Kivaのサイトから、この起業家に融資しますか？</string>
    <string name="message_loan_cancel">残念です。またの機会をお待ちしております。</string>
    <string name="slogan">今僕らにできる社会貢献</string>
    <string name="detail">詳細情報</string>
    <string name="list">起業家一覧</string>
    <string name="pickup">ピックアップ起業家</string>
    <string name="home">ホーム</string>
    <string name="delete">削除</string>
    <string name="sort">並び替え</string>
    <string name="filter">フィルタ</string>

</resources>