<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="@string/update" android:titleCondensed="@string/update" android:icon="@android:drawable/ic_menu_rotate" android:id="@+id/menu_update"></item>
<item android:title="@string/info" android:titleCondensed="@string/info" android:icon="@android:drawable/ic_menu_info_details" android:id="@+id/menu_info"></item>
<item android:title="@string/help" android:titleCondensed="@string/help" android:icon="@android:drawable/ic_menu_help" android:id="@+id/menu_help"></item>
<item android:title="@string/share" android:titleCondensed="@string/share" android:icon="@android:drawable/ic_menu_share" android:id="@+id/menu_share"></item>
<item android:id="@+id/menu_search" android:titleCondensed="@string/search" android:title="@string/search" android:icon="@android:drawable/ic_menu_search"></item>
</menu>
