<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_detail"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/detail"></item>

    <item
        android:id="@+id/menu_loan"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/loan"></item>

    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"></item>
<!--    <item-->
<!--        android:id="@+id/menu_shortcut"-->
<!--        android:icon="@android:drawable/ic_menu_myplaces"-->
<!--        android:title="@string/shortcut"></item>-->
<!--    <item-->
<!--        android:id="@+id/menu_bookmark"-->
<!--        android:icon="@android:drawable/ic_input_get"-->
<!--        android:title="@string/bookmark"></item>-->
        
    <item
        android:id="@+id/menu_search_name"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_name"></item>

    <item
        android:id="@+id/menu_search_country"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_country"></item>

    <item
        android:id="@+id/menu_search_category"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_category"></item>

</menu>